tests/should_fail/let_struct_on_string.nv
module fail
// Let destructure: struct on string value
struct Point { x: Int, y: Int }
let Point { x, y } = "hello"
